# PrivateDocSend

./: .gitignore  ENV_SETUP.md  LICENSE  PROJECT_STATUS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: main.py  requirements.txt
backend/detector/: presidio_detector.py
backend/io/: file_loader.py
backend/models/: mapping.py
backend/planner/: replacement_planner.py
backend/restore/: restore_engine.py
backend/services/: anonymize_document.py  restore_document.py
frontend/: App.tsx  index.css
frontend/components/: MappingList.tsx  ReplacePanel.tsx  RestorePanel.tsx
frontend/stores/: appStore.ts
frontend/tauri/: automation.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: active_window.rs  clipboard_bridge.rs  editor_automation.rs  main.rs
tests/: 民 事 起 诉 状（测试样本）.docx
